# cpp-utilies

./: README.md
dir-utilities/: CMakeLists.txt  CMakeLists.txt.user.6b83a20  UtilFiles.qml  UtilQt.qml  main.cpp  main.qml  search_model.cpp  search_model.h  search_model_settings.cpp  search_model_settings.h  search_qt_lib_model.cpp  search_qt_lib_model.h  search_qt_lib_model_setting.cpp  search_qt_lib_model_setting.h  searchmodel.cpp  searchmodel.h  settings.cpp  settings.h  settingsutilfiles.cpp  settingsutilfiles.h
